--- a/Assignment/MasterPage/Artist.Master
+++ b/Assignment/MasterPage/Artist.Master
@@ -13,10 +13,11 @@
     <header>
         <div class="header">
             <ul class="navigation">
-                <li><a href="Home.aspx">Home</a></li>           
-                <li><a href="Gallery.aspx">Gallery</a></li>                           
-                <li><a><%=Session["user"].ToString()%></a></li>           
-                <li><a href="logout.aspx">Log out</a></li>           
+                <li><a href="\Home.aspx">Home</a></li>           
+                <li><a href="\Pages\Artist\Gallery.aspx">Gallery</a></li>                           
+                <li><a href="\Pages\Artist\UploadNewArtwork.aspx">Upload</a></li>                           
+                <%--<li><a><%=Session["user"].ToString()%></a></li>--%>           
+                <li><a href="\logout.aspx">Log out</a></li>           
             </ul>
         </div>
     </header>
